--- a/Glass/Relatorios/Administrativos/rptGraficoVendas.rdlc
+++ b/Glass/Relatorios/Administrativos/rptGraficoVendas.rdlc
@@ -469,7 +469,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!Criterio.Value, "ChartVendas")</Value>
+                <Value>=Parameters!Criterio.Value</Value>
                 <Style>
                   <FontSize>12pt</FontSize>
                 </Style>
@@ -690,6 +690,12 @@
       <DataType>String</DataType>
       <AllowBlank>true</AllowBlank>
       <Prompt>Report_Parameter_2</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="Criterio">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
   </ReportParameters>
   <Language>pt-BR</Language>
