--- a/Glass/Layout.master
+++ b/Glass/Layout.master
@@ -165,7 +165,7 @@
                                                     <asp:Image ID="imgLogoWebGlass" runat="server" ImageUrl="~/Images/webglass.png" />
                                                 </td>
                                                 <td valign="bottom" style="padding-left: 4px; padding-bottom: 4px">
-                                                    <asp:Label ID="lblVersao" runat="server" ForeColor="Gray" Font-Size="85%"></asp:Label>
+                                                    <asp:LinkButton ID="lnkVersao" runat="server" ForeColor="Gray" Font-Overline="false" OnClientClick="openWindow(590, 760, '../Utils/VersaoDLLs.aspx'); return false;"></asp:LinkButton>
                                                 </td>
                                             </tr>
                                         </table>
