#69944 Mostar juros no RptContaRecebida para identificar se foi adicionado juros ao receber a conta

--- a/Glass/Relatorios/rptContaRecebida.rdlc
+++ b/Glass/Relatorios/rptContaRecebida.rdlc
@@ -1934,7 +1934,7 @@
             <Style />
           </Paragraph>
         </Paragraphs>
-        <Top>5.75cm</Top>
+        <Top>6.33509cm</Top>
         <Left>0.5cm</Left>
         <Height>0.63492cm</Height>
         <Width>3.25cm</Width>
@@ -1964,12 +1964,76 @@
             </Style>
           </Paragraph>
         </Paragraphs>
-        <Top>5.75cm</Top>
+        <Top>6.33509cm</Top>
         <Left>3.75cm</Left>
         <Height>0.63492cm</Height>
         <Width>15cm</Width>
         <ZIndex>21</ZIndex>
         <Style>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox9">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>Juros:</Value>
+                <Style>
+                  <FontWeight>Bold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox9</rd:DefaultName>
+        <Top>5.69048cm</Top>
+        <Left>0.50728cm</Left>
+        <Height>0.64461cm</Height>
+        <Width>3.25cm</Width>
+        <ZIndex>22</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox12">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=Sum(Fields!Juros.Value, "ContasReceber")</Value>
+                <Style>
+                  <Format>C</Format>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox12</rd:DefaultName>
+        <Top>5.69048cm</Top>
+        <Left>3.75cm</Left>
+        <Height>0.6cm</Height>
+        <Width>5.15212cm</Width>
+        <ZIndex>23</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
           <PaddingLeft>2pt</PaddingLeft>
           <PaddingRight>2pt</PaddingRight>
           <PaddingTop>2pt</PaddingTop>
