--- a/Global/Glass.Global.Relatorios/Produtos/rptFichaProduto.rdlc
+++ b/Global/Glass.Global.Relatorios/Produtos/rptFichaProduto.rdlc
@@ -844,7 +844,6 @@
                                           <PaddingBottom>2pt</PaddingBottom>
                                         </Style>
                                       </Textbox>
-                                      <rd:Selected>true</rd:Selected>
                                     </CellContents>
                                   </TablixCell>
                                   <TablixCell>
@@ -3961,7 +3960,7 @@
                             </TablixColumns>
                             <TablixRows>
                               <TablixRow>
-                                <Height>0.63492cm</Height>
+                                <Height>0.68784cm</Height>
                                 <TablixCells>
                                   <TablixCell>
                                     <CellContents>
@@ -4037,7 +4036,7 @@
                           </TablixRowHierarchy>
                           <DataSetName>Produtos</DataSetName>
                           <Top>0.55556cm</Top>
-                          <Height>0.63492cm</Height>
+                          <Height>0.68784cm</Height>
                           <Width>18.75cm</Width>
                           <ZIndex>3</ZIndex>
                           <Style>
@@ -4085,153 +4084,135 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>Produtos</DataSetName>
-        <Top>2.55944cm</Top>
+        <Top>0.17639cm</Top>
         <Height>19.12186cm</Height>
         <Width>18.75cm</Width>
         <Style>
           <VerticalAlign>Middle</VerticalAlign>
         </Style>
       </Tablix>
-      <Image Name="image1">
-        <Source>External</Source>
-        <Value>=Parameters!Logotipo.Value</Value>
-        <MIMEType>image/jpeg</MIMEType>
-        <Sizing>FitProportional</Sizing>
-        <Height>1.75cm</Height>
-        <Width>5.25cm</Width>
-        <ZIndex>1</ZIndex>
-        <Style />
-      </Image>
-      <Textbox Name="textbox13">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>Data:</Value>
-                <Style>
-                  <FontWeight>Bold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <Left>13.46162cm</Left>
-        <Height>0.64418cm</Height>
-        <Width>1.25cm</Width>
-        <ZIndex>2</ZIndex>
-        <Style>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="textbox12">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>=Globals!ExecutionTime</Value>
-                <Style />
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <Left>14.71162cm</Left>
-        <Height>0.64418cm</Height>
-        <Width>4cm</Width>
-        <ZIndex>3</ZIndex>
-        <Style>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="textbox11">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>Ficha de Produto</Value>
-                <Style>
-                  <FontSize>14pt</FontSize>
-                  <FontWeight>Bold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Center</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <Top>0.75001cm</Top>
-        <Left>5.825cm</Left>
-        <Height>0.75cm</Height>
-        <Width>7.25cm</Width>
-        <ZIndex>4</ZIndex>
-        <Style>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Line Name="line3">
-        <Top>2.53563cm</Top>
-        <Height>0cm</Height>
-        <Width>18.73016cm</Width>
-        <ZIndex>5</ZIndex>
-        <Style>
-          <Border>
-            <Style>Solid</Style>
-          </Border>
-        </Style>
-      </Line>
-      <Textbox Name="textbox1">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>="Critério: " &amp; Parameters!Criterio.Value</Value>
-                <Style />
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <Top>1.79093cm</Top>
-        <Height>0.63492cm</Height>
-        <Width>18.75cm</Width>
-        <ZIndex>6</ZIndex>
-        <Visibility>
-          <Hidden>=Iif(Parameters!Criterio.Value = " ", true, false)</Hidden>
-        </Visibility>
-        <DataElementOutput>NoOutput</DataElementOutput>
-        <Style>
-          <VerticalAlign>Middle</VerticalAlign>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
     </ReportItems>
-    <Height>21.6813cm</Height>
+    <Height>19.4588cm</Height>
     <Style />
   </Body>
   <Width>18.75cm</Width>
   <Page>
+    <PageHeader>
+      <Height>1.85208cm</Height>
+      <PrintOnFirstPage>true</PrintOnFirstPage>
+      <PrintOnLastPage>true</PrintOnLastPage>
+      <ReportItems>
+        <Image Name="image1">
+          <Source>External</Source>
+          <Value>=Parameters!Logotipo.Value</Value>
+          <MIMEType>image/jpeg</MIMEType>
+          <Sizing>FitProportional</Sizing>
+          <Height>1.75cm</Height>
+          <Width>5.25cm</Width>
+          <Style />
+        </Image>
+        <Textbox Name="textbox11">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>Ficha de Produto</Value>
+                  <Style>
+                    <FontSize>14pt</FontSize>
+                    <FontWeight>Bold</FontWeight>
+                  </Style>
+                </TextRun>
+              </TextRuns>
+              <Style>
+                <TextAlign>Center</TextAlign>
+              </Style>
+            </Paragraph>
+          </Paragraphs>
+          <Top>0.45897cm</Top>
+          <Left>5.825cm</Left>
+          <Height>0.75cm</Height>
+          <Width>7.25cm</Width>
+          <ZIndex>1</ZIndex>
+          <Style>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
+        <Textbox Name="textbox13">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>Data:</Value>
+                  <Style>
+                    <FontWeight>Bold</FontWeight>
+                  </Style>
+                </TextRun>
+              </TextRuns>
+              <Style />
+            </Paragraph>
+          </Paragraphs>
+          <Left>13.5cm</Left>
+          <Height>0.64418cm</Height>
+          <Width>1.25cm</Width>
+          <ZIndex>2</ZIndex>
+          <Style>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
+        <Textbox Name="textbox12">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>=Globals!ExecutionTime</Value>
+                  <Style />
+                </TextRun>
+              </TextRuns>
+              <Style />
+            </Paragraph>
+          </Paragraphs>
+          <Left>14.75cm</Left>
+          <Height>0.64418cm</Height>
+          <Width>4cm</Width>
+          <ZIndex>3</ZIndex>
+          <Style>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
+        <Line Name="line3">
+          <Top>1.78528cm</Top>
+          <Left>0.01984cm</Left>
+          <Height>0cm</Height>
+          <Width>18.73016cm</Width>
+          <ZIndex>4</ZIndex>
+          <Style>
+            <Border>
+              <Style>Solid</Style>
+            </Border>
+          </Style>
+        </Line>
+      </ReportItems>
+      <Style>
+        <Border>
+          <Style>None</Style>
+        </Border>
+      </Style>
+    </PageHeader>
     <PageFooter>
       <Height>0.7791cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
@@ -4301,6 +4282,18 @@
           <Height>0cm</Height>
           <Width>18.73016cm</Width>
           <ZIndex>2</ZIndex>
+          <Style>
+            <Border>
+              <Style>Solid</Style>
+            </Border>
+          </Style>
+        </Line>
+        <Line Name="line4">
+          <Top>0.10583cm</Top>
+          <Left>0.00992cm</Left>
+          <Height>0cm</Height>
+          <Width>18.73016cm</Width>
+          <ZIndex>3</ZIndex>
           <Style>
             <Border>
               <Style>Solid</Style>
